# tauri-rmusic

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  Makefile  README.md  README_zh.md  blog_promotion_zh.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
src/: App.vue  main.js  main.ts
src-tauri/: .gitattributes  .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: file.rs  lib.rs  main.rs  music.rs  netease.rs  playlist.rs  service.rs  tray.rs
src/api/: client.ts  types.ts
src/api/commands/: file.ts  index.ts  music.ts  netease.ts  playlist.ts  system.ts
src/assets/styles/: message.css  themes.css
src/components/: HeaderBar.vue  ImmersiveView.vue  LyricView.vue  MusicList.vue  OnlineMusicList.vue  PlayerBar.vue
src/components/HeaderBar/: HeaderBar.css  HeaderBar.vue
src/components/ImmersiveView/: ImmersiveView.css  ImmersiveView.vue
src/components/LyricView/: LyricView.css  LyricView.vue
src/components/MusicList/: MusicList.css  MusicList.vue
src/components/OnlineMusicList/: OnlineMusicList.css  OnlineMusicList.vue
src/components/PlayerBar/: PlayerBar.css  PlayerBar.vue
src/components/SettingsWindow/: SettingsWindow.css  SettingsWindow.vue
src/components/Sidebar/: Sidebar.vue
src/components/TitleBar/: TitleBar.css  TitleBar.vue
src/components/base/CoverImage/: CoverImage.vue
src/components/feature/ImmersiveView/: ImmersiveView.css  ImmersiveView.vue
src/components/feature/LyricView/: LyricView.css  LyricView.vue
src/composables/: index.ts  useAppKeyboardShortcuts.ts  useArtistNavigation.ts  useCoverBrightness.ts  useCoverLoader.ts  useLocalCoverCache.ts  useLyrics.test.ts  useLyrics.ts  useOnlinePlaylistActions.test.ts  useOnlinePlaylistActions.ts  usePlatform.ts  usePlaybackClock.ts  usePlaybackDetector.ts  usePlaybackProgressSlider.ts  usePlaybackQueue.test.ts  usePlaybackQueue.ts  usePlaybackVolume.ts  useStorageThemeSync.ts  useTrayPlaybackEvents.ts  useVirtualListWhenLong.ts  useWindowControls.ts  useWindowDrag.ts  useWindowSizeConstraints.ts
src/constants/: index.ts
src/css/: Home.css  Netease.css
src/i18n/: index.ts
src/locales/: en.ts  zh.ts
src/router/: index.js  index.ts
src/store/: musicState.js
src/stores/: artistStore.ts  localMusicStore.ts  musicStore.ts  onlineMusicStore.ts  onlineServiceStore.ts  playerStore.ts  playlistStore.test.ts  playlistStore.ts  searchHistoryStore.ts  themeStore.ts  viewStore.ts
src/test/: setup.ts
src/types/: index.ts  model.ts
src/utils/: artistNav.ts  coverUtils.ts  errorUtils.ts  pathUtils.ts  playbackQueue.test.ts  playbackQueue.ts  settingsWindow.ts  songUtils.ts
src/views/: ArtistView.vue  Home.vue  LocalMusicView.vue  Netease.vue  OnlineMusicView.vue  PlayBar.vue  PlaylistView.css  PlaylistView.vue  SettingsView.vue
(+24 files in other folders)
