[package]
name = "rmusic"
version = "1.3.0"
description = "A modern, lightweight cross-platform desktop music player built with Tauri 2 and Vue 3. Play local audio files and stream online music through third-party API proxies."
authors = ["xudong7"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rmusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
zip = "2"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
rodio = "0.20.1"
symphonia = { version = "0.5.4", default-features = false, features = ["mp3"] }
tokio = { version = "1.44.2", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.2"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.6"
sha1 = "0.10.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
